Fix for proper ValueObject handling in lists